--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Coffee-Utils contains utils that help you better convert coffeescripts to javascripts.",
   "main": "coffee2js.js",
   "dependencies": {
-    "line-reader": "^0.4.0"
+    "line-reader": "^0.4.0",
+    "mkdirp": "^0.5.1",
+    "shelljs": "^0.7.5"
   },
   "devDependencies": {},
   "scripts": {
